[build-system]
requires = ["scikit_build_core", "pybind11", "cmake>=3.28", "ninja", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "alphafold3"
version = "3.0.1"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "absl-py",
    "dm-haiku",
    "jax[cuda12]",
    "numpy",
    "rdkit",
    "setuptools",
    "tokamax",
    "tqdm",
    "zstandard",
]

[dependency-groups]
dev = ["pytest"]

[tool.uv]
package = true
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.scikit-build]
wheel.exclude = ["**.pyx", "**/CMakeLists.txt", "**.cc", "**.h"]
sdist.include = [
    "LICENSE",
    "OUTPUT_TERMS_OF_USE.md",
    "WEIGHTS_PROHIBITED_USE_POLICY.md",
    "WEIGHTS_TERMS_OF_USE.md",
]

[tool.cibuildwheel]
build = "cp3*-manylinux_x86_64"
manylinux-x86_64-image = "manylinux_2_28"

[project.scripts]
build_data = "alphafold3.build_data:build_data"
